Add admin config file list and create APIs
